Fix layout gap

--- a/media/css/admin/all.css
+++ b/media/css/admin/all.css
@@ -850,7 +850,6 @@ ul.links li a:hover{
 }
 .table .col-3 ul li a {
 	padding:0 9px;
-	float:left;
 	line-height:24px;
 	font-weight:bold;
 	text-decoration:none;
